--- a/others/pom.xml
+++ b/others/pom.xml
@@ -145,6 +145,14 @@
 		    <artifactId>xercesImpl</artifactId>
 		    <version>2.12.1</version>
 		</dependency>
+		    
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		<dependency>
+		    <groupId>org.aspectj</groupId>
+		    <artifactId>aspectjweaver</artifactId>
+		    <version>${org.aspectj-version}</version>
+		    <scope>runtime</scope>
+		</dependency>
 		       
 	</dependencies>
     <build>
