--- a/others/pom.xml
+++ b/others/pom.xml
@@ -147,6 +147,7 @@
 		</dependency>
 		    
 		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		<!-- => Spring AOP의 AspectJ Weaving 기능을 제공하는 라이브러리 -->
 		<dependency>
 		    <groupId>org.aspectj</groupId>
 		    <artifactId>aspectjweaver</artifactId>
