--- a/others/pom.xml
+++ b/others/pom.xml
@@ -236,6 +236,14 @@
 		    <version>${org.springframework-version}</version>
 		    <!-- <scope>test</scope> -->
 		</dependency>
+			
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<!-- => 요청 처리 메소드에서 반환되는 Java 객체를 JSON 형식의 문자열로 변환하는 기능을 제공하는 라이브러리 -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.12.5</version>
+		</dependency>
 				       
 	</dependencies>
     <build>
